# animal-photos-telegram-bot

./: .dockerignore  .env.docker.example  .gitignore  README.md  docker-compose.yml  pyrightconfig.json
.github/workflows/: ci.yml
backend/: .env.example  Dockerfile  README.md  pyproject.toml  pyrightconfig.json
backend/app/: main.py
backend/app/api/: telegram_webhook.py
backend/app/core/: config.py
backend/app/models/: schemas.py
backend/app/services/: location_from_text.py  reverse_geocode.py  supabase_client.py  telegram_client.py  vision_ai.py
backend/tests/: conftest.py  test_location_from_text.py  test_reverse_geocode.py  test_schemas.py  test_webhook.py
deploy/: Caddyfile
frontend/: .env.example  Dockerfile  README.md  package-lock.json  package.json  playwright.config.ts  vitest.config.ts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/components/: dashboard-details-section.tsx  dashboard-kpi-row.tsx  map-wrapper.tsx  report-photo-modal.tsx  reports-map.tsx  reports-table.tsx  species-pie-chart.tsx  telegram-bot-cta.test.tsx  telegram-bot-cta.tsx  theme-toggle.tsx
frontend/components/ui/: calendar.tsx  date-filter-picker.tsx  label.tsx
frontend/e2e/: home.spec.ts
frontend/lib/: dashboard-data.ts  demo-data.ts  location-display.test.ts  location-display.ts  report-photo-query.ts  species-color.test.ts  species-color.ts  supabase.ts  telegram-bot.ts  utils.test.ts  utils.ts
supabase/migrations/: 001_init.sql  002_location_labels.sql  003_species_fact.sql
